old_tests/tests/lean/dsimp_whnf_post.lean.expected.out
dsimp_whnf_post.lean:6:36: error: tactic failed, there are unsolved goals
state:
⊢ () = ()
